--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,10 @@
            <div class="column">
             <br>
             <h2>graphic design II</h2>
-            <img src="images/design2.png" alt="poster" class="screenshot1"><br></div>  
+            <img src="images/design2.png" alt="poster" class="screenshot1"><br>
            <br>
-           
+           <h2>3D modeling (blender)</h2>
+           <img src="images/tavern-highres.png" class="screenshot1">
+        </div>  
 </body>
 </html>
