--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
          <div class="column">
          <h3>
             <em class="blue">tl:dr;</em>
-            i'm a frontend developer, sometimes backend-fiddler and sometimes-designer with a deep love for good UI. i'm a jack of all trades, and hope one day to be a master of at least <em>some.</em>
+            i'm a narrative spinner, sometimes frontend-fiddler and sometimes-designer with a deep love for good UI and stories that suck you in for weeks at a time. i'm a jack of all trades, and hope one day to be a master of at least <em>some.</em>
          </h3>
          <br>
          <p>a lot of things on the internet, imporant things like government sites and informational graphics we need to 
