--- a/about.html
+++ b/about.html
@@ -3,16 +3,18 @@
    <head>
       <title>about me</title>
       <link rel="stylesheet" type="text/css" href="style2.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    </head>
    <body>
-      <ul class="topnavi">
-         <li class="page"><a href="index.html">[ home ]</a></li>
-         <li class="page"><a href="resume.html">[ resume ]</a></li>
-         <li class="page"><a href="about.html">[ about ]</a></li>
-         <li class="page"><a href="portfolio.html">[ portfolio ]</a></li>
-         <li class="page"><a href="contact.html">[ contact ]</a></li>
-      </ul>
-      <h1 class="about-header">a bit about me...</h1>
+      <ul class="topnavi heavy-text">
+         <li class="page"><a href="index.html">     home    </a></li>
+         <li class="page"><a href="resume.html">    resume    </a></li>
+         <li class="page"><a href="about.html">    about    </a></li>
+         <li class="page"><a href="portfolio.html">    portfolio    </a></li>
+         <li class="page"><a href="contact.html">    contact    </a></li>
+     </ul>
+     <a href="index.html" class="back-button">back home!</a>
+      <h1 class="about-header mega-text">a bit about me...</h1>
       <div class="row">
          <div class="column">
             <img id="chair" class="chair-about" src="images/chair.png" alt="chair">
@@ -60,6 +62,21 @@
              <hr>
             </div>
             </div>
-            
+            <script>
+               $(document).ready(function() {
+                   // Get current page URL
+                   var currentPage = window.location.pathname.split('/').pop();
+   
+                   // Loop through topnavi links
+                   $('.topnavi a').each(function() {
+                       var linkPage = this.href.split('/').pop();
+   
+                       if (linkPage === currentPage) {
+                           // Add 'active' class to the parent li of the matching link
+                           $(this).parent('li').addClass('active');
+                       }
+                   });
+               });
+   </script>       
    </body>
 </html>
