--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
            </div>
            <div class="grid-item">
             <img style="height:50px;"src="images/doc.png">
-            <h2 class="medium-text">technical writing samples</h2>
+            <h2 class="medium-text">game design</h2>
             <a href="#writing" class="project-link">+</a>
         </div>
         <div class="grid-item">
@@ -47,7 +47,7 @@
         </div>
         <div class="grid-item">
             <img style="height:50px;"src="images/doc.png">
-            <h2 class="medium-text">academic writing</h2>
+            <h2 class="medium-text">writing samples</h2>
             <a href="#academic" class="project-link">+</a>
         </div>
           </div>
