--- a/resume.html
+++ b/resume.html
@@ -80,14 +80,18 @@
             <br>
             <ul>
                 <li>project management</li>
+                <li>full stack development</li>
+                <li>product design</li>
                 <li>agile methodologies (scrum, kanban) </li>
                 <li>technical writing</li>
                 <li>ui/ux design</li>
-                <li> 3D modeling (blender) </li>
+                <li> 3D modeling (blender, 3ds max) </li>
+                <li>processing (language)</li>
+                <li>intermediate c++</li>
                 <li>app store optimization (aso)</li>
                 <li>mobile app analytics (google analytics, mixpanel, amplitude, firebase analytics)</li>
                 <li>data analysis and visualization (sql, tableau)</li>
-                <li>python, django, php, js, html, css </li>
+                <li>advanced python, django, php, js, sql, html, css </li>
                 <li>adobe creative suite</li>
                 <li>microsoft office</li>
                 <li>adobe creative suite, final cut pro, logic, pro tools</li>
