--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
                <a href="#graphicdesign" class="project-link">+</a>
            </div>
            <div class="grid-item">
-            <img style="height:50px;"src="images/doc.png">
+            <img style="height:50px;"src="images/game.png">
             <h2 class="medium-text">game design</h2>
-            <a href="#writing" class="project-link">+</a>
+            <a href="#game" class="project-link">+</a>
         </div>
         <div class="grid-item">
             <img style="height:50px;"src="images/wp.png">
