--- a/resume.html
+++ b/resume.html
@@ -17,20 +17,36 @@
   <a href="index.html" class="back-button">back home!</a>
       <br>
       <br>
-      <h1 class="light-text">caroline cahill</h1>
+      <h1>caroline cahill</h1>
+      <hr>
       <!-- begin resume -->
       <div class="row">
          <div class="column">
-            <h2 class="mega-text">education</h2>
+            <h2 class="raglot" style="color:blue;">education</h2>
             <br>
             <h3>trinity college, dublin</h3>
             <h4>m. sc. interactive digital media | 2024</h4>
-            <p>course description:</p>
+            <p>relevant coursework:</p>
             <ul>
-             <li>this course is designed to help students learn how to design, develop and understand digital media applications and content on existing and emerging platforms. </li>
-             <li>the course covers the programming languages and applications used in digital media, a range of design techniques (graphic design, interactive design, ui/ux design, game design) as well as approaches to content creation in a range of modalities (moving image, audio, sensor technologies). </li>
-             <li>in addition to practical skills, the course also covers critical thinking around digital media, giving the students the ability to situate works and ideas in relevant cultural contexts.</li>
-            </ul>
+                <li>comprehensive full lifecycle web development, including:</li>
+                <div style="padding-left: 30px;">
+                <li>building requirements documents</li>
+                <li>wireframing pages</li>
+                <li>outlining and researching best ui/ux and accessibility processes</li>
+                <li>social media integration plan</li>
+            </div>
+                <li>web development accessibility principles and how to apply them in a meaningful way</li>
+                <li>interdisciplinary collaboration on projects with large scopes</li>
+                <li>rigorous ui/ux and compliance strategy</li>
+                <li>javascript development, specifically for games and web design</li>
+                <li>visual computing and 3d graphics</li>
+                <li>c++ development, applied particularly to sensor technologies</li>
+             </ul>
+             notable projects:
+             <ul>
+                <li>taproot: a data visualization project made with visual computing software</li>
+                <li>mise: a photo-sharing site designed as an alternative to substack for food/chef writing</li>
+             </ul>
             <br>
             <h3>boston university</h3>
             <h4>b.s media science, computer science | 2021</h4>
@@ -43,7 +59,7 @@
                 <li>business ethics</li></ul>
          </div>
          <div class="column">
-            <h2 class="mega-text">experience</h2>
+            <h2 class="raglot" style="color:blue;">experience</h2>
             <br>
             <h3>brown university</h3>
             <h4>senior library technologist | 2022 - present</h4>
@@ -75,7 +91,7 @@
             </ul>
             </div>
          <div class="column">
-            <h2 class="mega-text">skills</h2>
+            <h2 class="raglot" style="color:blue;">skills</h2>
             <br>
             <br>
             <ul>
