--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li class="page"><a href="contact.html">    contact    </a></li>
     </ul>
     <div class="main-wrapper">
-    <h1 class="mega-text" id="header">caroline cahill</h1>
+    <h1 class="raglot" id="header">caroline cahill</h1>
     <p id="bottom" class="hint"><small>hint: mouse over things in my room to learn more!</small></p>
     <br>
     <br>
