--- a/resume.html
+++ b/resume.html
@@ -44,8 +44,8 @@
              </ul>
              notable projects:
              <ul>
-                <li>taproot: a data visualization project made with visual computing software</li>
-                <li>mise: a photo-sharing site designed as an alternative to substack for food/chef writing</li>
+                <li><a href="taproot.html">taproot</a>: a data visualization project made with visual computing software</li>
+                <li><a href="portfolio.html#mise">taproot</a>: a photo-sharing site designed as an alternative to substack for food/chef writing</li>
              </ul>
             <br>
             <h3>boston university</h3>
