--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <h1 class="about-header mega-text">a bit about me...</h1>
       <div class="row">
          <div class="column">
-            <img id="chair" class="chair-about" src="images/chair.png" alt="chair">
+            <img id="chair" class="chair-about" src="images/me.png" alt="caroline">
          </div>
          <div class="column">
             <h3>
