--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
              notable projects:
              <ul>
                 <li><a href="taproot.html">taproot</a>: a data visualization project made with visual computing software</li>
-                <li><a href="portfolio.html#mise">taproot</a>: a photo-sharing site designed as an alternative to substack for food/chef writing</li>
+                <li><a href="portfolio.html#mise">mise</a>: a photo-sharing site designed as an alternative to substack for food/chef writing</li>
              </ul>
             <br>
             <h3>boston university</h3>
