--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div class="about-column">
                     <h3>Backstory</h3>
                     <p>I’ve worn a lot of hats over my career so far, and they’ve each given me a unique perspective. 
-                        As the child of Irish emigrant parents, spending my youth between Dublin and the USA kept 
+                        As the child of Irish emigrant parents, spending my early years between Dublin and the USA kept 
                         me from being tied to a single culture. I soaked up as much inspiration from moss-bearded 
-                        ruins and rushing glen rivers as I did the neon lights and painted deli windows of New 
+                        ruins and ancient ruins as I did the neon lights and painted deli windows of New 
                         Jersey.
                     </p>
                     <p>My undergrad degree helped me build strong writing, research, and analytical skills. 
@@ -67,7 +67,7 @@
                     <li>Fighting the daily battle of trying not to buy some bougie olive oil just because the packaging is gorgeous</li>
                     <li>Checking on fermentation experiments in my kitchen</li>
                     <li>Ten links deep on some obscure Wikipedia page (ok, that one's online too)</li>
-                    <li>Starting up my 18th Baldur's Gate 3 save</li>
+                    <li>Starting up my 18th <i>Baldur's Gate 3 save</i></li>
                 </ul>
                 
                 <img src="images/circle.png" alt="Profile Image" class="about-image">
