--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="orange-circle"></div>
         <div class="header">
             <div class="title">
-                <p class="row1"></p>
+                <p class="row1">frontend developer</p>
                 <h1 class="row2">CAROLINE CAHILL</h1>
                 <p class="row3">product designer</p>
             </div>
