--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>I’ve worn a lot of hats over my career so far, and they’ve each given me a unique perspective. 
                         As the child of Irish emigrant parents, spending my early years between Dublin and the USA kept 
                         me from being tied to a single culture. I soaked up as much inspiration from moss-bearded 
-                        ruins and ancient ruins as I did the neon lights and painted deli windows of New 
+                        ruins as I did the neon lights and painted deli windows of New 
                         Jersey.
                     </p>
                     <p>My undergrad degree helped me build strong writing, research, and analytical skills. 
