--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="title">
                 <p class="row1">product manager</p>
                 <h1 class="row2">CAROLINE CAHILL</h1>
-                <p class="row3">product designer</p>
+                <p class="row3">ux/ui & creative strategy</p>
             </div>
             <div class="button cv"><a href="#cv">CV</a></div>
             <div class="button about"><a href="#about">About</a></div>
